updated controllers to work with auto-gen sequelizer models. Added delete functionality.
