# models/artefacts.js
@@ -1,0 +1,60 @@
+const Sequelize = require('sequelize');
+module.exports = function(sequelize, DataTypes) {
+  return sequelize.define('artefacts', {
+    id: {
+      autoIncrement: true,
+      type: DataTypes.INTEGER,
+      allowNull: false,
+      primaryKey: true
+    },
+    artist: {
+      type: DataTypes.STRING(500),
+      allowNull: false
+    },
+    title: {
+      type: DataTypes.STRING(500),
+      allowNull: false
+    },
+    description: {
+      type: DataTypes.STRING(500),
+      allowNull: true
+    },
+    type: {
+      type: DataTypes.STRING(200),
+      allowNull: false
+    },
+    material: {
+      type: DataTypes.STRING(200),
+      allowNull: false
+    },
+    date: {
+      type: DataTypes.DATEONLY,
+      allowNull: true
+    },
+    created_at: {
+      type: DataTypes.DATE,
+      allowNull: false,
+      defaultValue: Sequelize.Sequelize.fn('current_timestamp')
+    },
+    modified_at: {
+      type: DataTypes.DATE,
+      allowNull: false,
+      defaultValue: "0000-00-00 00:00:00"
+    }
+  }, {
+    sequelize,
+    tableName: 'artefacts',
+    timestamps: false,
+    camelCase: true,
+    indexes: [
+      {
+        name: "PRIMARY",
+        unique: true,
+        using: "BTREE",
+        fields: [
+          { name: "id" },
+        ]
+      },
+    ]
+  });
+};
