# models/artists.js
@@ -1,0 +1,52 @@
+const Sequelize = require('sequelize');
+module.exports = function(sequelize, DataTypes) {
+  return sequelize.define('artists', {
+    id: {
+      autoIncrement: true,
+      type: DataTypes.INTEGER,
+      allowNull: false,
+      primaryKey: true
+    },
+    first_name: {
+      type: DataTypes.STRING(100),
+      allowNull: false
+    },
+    last_name: {
+      type: DataTypes.STRING(100),
+      allowNull: false
+    },
+    dob: {
+      type: DataTypes.DATEONLY,
+      allowNull: true
+    },
+    birth_place: {
+      type: DataTypes.STRING(200),
+      allowNull: true
+    },
+    created_at: {
+      type: DataTypes.DATE,
+      allowNull: false,
+      defaultValue: Sequelize.Sequelize.fn('current_timestamp')
+    },
+    modified_at: {
+      type: DataTypes.DATE,
+      allowNull: false,
+      defaultValue: "0000-00-00 00:00:00"
+    }
+  }, {
+    sequelize,
+    tableName: 'artists',
+    timestamps: false,
+    camelCase: true,
+    indexes: [
+      {
+        name: "PRIMARY",
+        unique: true,
+        using: "BTREE",
+        fields: [
+          { name: "id" },
+        ]
+      },
+    ]
+  });
+};
